tdf#90010 Partially revert "package: Do not bother with deflating jpeg images"

This reverts commit 0843ade74e5848c0babad509b10c334b01847be2 for the case, when
the document is protected by password. Would be nice to fix properly later.

Change-Id: If159639d6f74de4e106e9dad382faac9d5de4a09