package/source/zippackage/ZipPackageStream.cxx
@@ -775,7 +775,8 @@ bool ZipPackageStream::saveChild(
 
         uno::Reference< io::XSeekable > xSeek(xStream, uno::UNO_QUERY);
         // It's not worth to deflate jpegs to save ~1% in a slow process
-        if (xSeek.is() && msMediaType.endsWith("/jpeg"))
+        // Unfortunately, does not work for streams protected by password
+        if (xSeek.is() && msMediaType.endsWith("/jpeg") && !m_bToBeEncrypted)
         {
             ImplSetStoredData(*pTempEntry, xStream);
             xSeek->seek(0);
